# govnogang

./: CMakeLists.txt
Task_1/: Task_1.cpp
Task_10/: Task_10.cpp
Task_11/: Task_11.cpp
Task_13/: Task_13.cpp
Task_2/: Task_2.cpp
Task_3/: Task_3.cpp
Task_7/: Task_7.cpp
Task_8/: Task_8.cpp  t8 address.rtf  t8 leak.rtf  t8 memory.rtf  t8 thread.rtf  t8 undefined.rtf
Task_9/: Task_9.cpp
